--- a/dev/blocks/you-will-get/you-will-get-mobile.scss
+++ b/dev/blocks/you-will-get/you-will-get-mobile.scss
@@ -29,6 +29,10 @@
     }
   }
 
+  .you-will-get__cap-block:first-child {
+    width: 100%;
+  }
+
   .you-will-get__adv-title {
     margin-top: 2rem;
     font-size: .875rem;
